--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my simple website</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
-    
+    <div>
+        <h2>my first website</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus eveniet in unde. Inventore, quibusdam tempora. Quibusdam earum sed molestiae quo. A, asperiores magni. Repellat rerum, molestiae maiores labore laborum facilis.</p>
+    </div>
 </body>
 </html>
