my first web site

--- a/index.html
+++ b/index.html
@@ -11,5 +11,13 @@
         <h2>my first website</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus eveniet in unde. Inventore, quibusdam tempora. Quibusdam earum sed molestiae quo. A, asperiores magni. Repellat rerum, molestiae maiores labore laborum facilis.</p>
     </div>
+    <div>
+        <h2>my second website</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus eveniet in unde. Inventore, quibusdam tempora. Quibusdam earum sed molestiae quo. A, asperiores magni. Repellat rerum, molestiae maiores labore laborum facilis.</p>
+    </div>
+    <div>
+        <h2>my third website</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus eveniet in unde. Inventore, quibusdam tempora. Quibusdam earum sed molestiae quo. A, asperiores magni. Repellat rerum, molestiae maiores labore laborum facilis.</p>
+    </div>
 </body>
 </html>
